--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>poshell</name>
     <description>Demo project for Layered Systems</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -38,6 +38,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.5.7</version>
             </plugin>
         </plugins>
     </build>
